# ucap-tpc

./: CHANGELOG.md  README.md  ucap-tpc.cabal
app/: Main.hs
lib/UCap/: TPCC.hs
lib/UCap/TPCC/: Data.hs
