cabal-version:      3.0
name:               ucap-tpc
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             octalsrc
maintainer:         nicklewchenko92@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        UCap.TPCC

    -- Modules included in this library but not exported.
    other-modules:
        UCap.TPCC.Data

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , containers
                    , microlens-platform
                    , mtl
                    , ucap
    hs-source-dirs:   lib
    default-language: Haskell2010

executable ucap-tpc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        ucap-tpc

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite ucap-tpc-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
